--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 /launcher
 /package.json
 /scripts
+# Ignore node modules for all subprojects
+node_modules/
+
+# Ignore environment files
+.env
+*.env
+
+# Optional: build outputs
+dist/
+build/
