--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Honeyside/Clover#readme",
   "dependencies": {
+    "argon2": "^0.44.0",
     "bcryptjs": "^3.0.2",
     "bluebird": "3.7.2",
     "colors": "1.4.0",
