--- a/backend/.env
+++ b/backend/.env
@@ -12,7 +12,7 @@ ROOT_USER_LAST_NAME=User
 
 # fill either uri or connection details
 # uri format: mongodb://[username]:[password]@domain_or_ip:port/database_name (must include database name)
-MONGO_URI=mongodb+srv://suyashsakore2151_db_user:a4qecUatDVw75uaD@cluster0.mongodb.net/clover?retryWrites=true&w=majority
+MONGO_URI=mongodb://suyashsakore2151_db_user:a4qecUatDVw75uaD@cluster0.s8kxunc.mongodb.net:27017/clover?retryWrites=true&w=majority
 
 
 # fill either uri or connection details
